# ax-graph

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  agent.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_users_auth_tokens.py  0002_settings.py  0003_sources.py  0004_prompts.py  0005_ai_task_definitions.py  0006_ai_tasks.py  0007_approval_gates.py  0008_gate_feedback.py  0009_approval_gate_revisions.py  0010_gate_revision_task_fks.py  0011_drafts_apply_plans.py  0012_documents_edges.py  0013_graph_chat.py  (+11 more)
apps/api/axkg/: config.py  main.py  seeds.py
apps/api/tests/: conftest.py  test_ai_pipeline.py  test_apply_executor.py  test_apply_reresolve.py  test_auth.py  test_authz_roles.py  test_backfill_company_root.py  test_chat_push_to_inbox.py  test_classification_gate.py  test_company_context.py  test_document_paths.py  test_documentation_gate.py  test_feature_dedup.py  test_graph_api.py  test_graph_chat.py  test_graph_chat_execution.py  test_graph_core.py  test_graph_two_stage_retriever.py  test_health.py  test_markdown_parser.py  test_markdown_root.py  test_plan_fanout.py  test_project_fanout.py  test_prompts.py  test_qmd_client.py  test_reclassification_reopen.py  test_resume_guard.py  test_settings_ai_provider.py  test_slack.py  test_source_collection.py  test_source_summary.py  test_source_upload.py  test_sources.py  test_stale_chain.py  test_summary_archive.py  test_summary_library.py  test_templates.py
(+377 files in other folders)
