[project]
name = "axkg-api"
version = "0.0.1"
description = "AX Knowledge Graph FastAPI API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "jsonschema>=4.23",
    "beautifulsoup4>=4.12",
    "yt-dlp>=2024.0",
    "youtube-transcript-api>=1.0",
    "playwright>=1.40",
    "open-kknaks>=2.0.2",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
